--- a/djdan/site-templates/annotations/index.html
+++ b/djdan/site-templates/annotations/index.html
@@ -1,4 +1,5 @@
 <html><body>
+<h1>Default</h1>
 <h2><a href="session">Sessions</a></h2>
 <h2><a href="annotation">Annotations</a></h2>
 </body></html>
