--- a/djdan/site-templates/annotations/sessionlist.html
+++ b/djdan/site-templates/annotations/sessionlist.html
@@ -1,5 +1,8 @@
-<html><body>
-<h1>Sessions</h1>
+{% extends "base.html" %}
+
+{% block title %}Sessions{% endblock %}
+
+{% block content %}
 {% if sessionlist %}
 <ul>
 {% for session in session_list %}
@@ -12,6 +15,4 @@
 
 
 <p>TODO: Add form to create new sessions </p>
-
-</body>
-</html>
+{% endblock %}
