--- a/djdan/site-templates/annotations/sessionlist.html
+++ b/djdan/site-templates/annotations/sessionlist.html
@@ -7,7 +7,7 @@
 <h1>Past Sessions</h2>
 <ul>
 {% for session in session_list %}
-  <li><a href="session/{{session.id}}"><span class="session_title">{{session.title}}</span> created by {% session.creator %}.{% if session.description %}
+  <li><a href="session/{{session.id}}"><span class="session_title">{{session.title}}</span> created by {{ session.creator }}.{% if session.description %}
        <div class="session_description">{{ session.description }}</div>{% endif %}</a></li>
 {% endfor %}
 </ul>
