Fixing base template

--- a/djdan/site-templates/annotations/base.html
+++ b/djdan/site-templates/annotations/base.html
@@ -3,8 +3,9 @@
 <head>
 	<title>{% block title %}DJ annotator{% endblock %}</title>
 	<link rel="stylesheet" href="/static/basestyle.css" />
+	<style>
         {% block pagestyling %}{% endblock %}
-	<script src=""></script>
+	</style>
 </head>
 
 <body>
