--- a/djdan/site-templates/annotations/session.html
+++ b/djdan/site-templates/annotations/session.html
@@ -13,15 +13,15 @@
 <div id="annotations">
 {% for annotation in annotations %}
 	<div class="three columns">
-		<div class="leftitem">{{ annotation.leftitem }}</div>
-		<div class="annotation">{% if annotation.annotation %}
+		<div class="three columns leftitem">{{ annotation.leftitem }}</div>
+		<div class="four columns annotation">{% if annotation.annotation %}
 			<div class="annotation_text">{{ annotation.annotation }}</div>
 {% else %}
 		<div class="annotation"></div>
 {% endif %}
 			<div class="annotation_author">By {{annotation.creator}} on {{annotation.datestamp}}</div>
 		</div>
-		<div class="rightitem">{{ annotation.leftitem }}</div>
+		<div class="three columns rightitem">{{ annotation.leftitem }}</div>
 	</div>
 {% endfor %}
 </div>
