Altered the static files import path

--- a/djdan/site-templates/annotations/base.html
+++ b/djdan/site-templates/annotations/base.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>{% block title %}DJ annotator{% endblock %}</title>
-	<link rel="stylesheet" href="{% static "annotations/css/base.css" %}" />
-	<link rel="stylesheet" href="{% static "annotations/css/skeleton.css" %}" />
-	<link rel="stylesheet" href="{% static "annotations/css/layout.css" %}" />
+	<link rel="stylesheet" href="{% static "css/base.css" %}" />
+	<link rel="stylesheet" href="{% static "css/skeleton.css" %}" />
+	<link rel="stylesheet" href="{% static "css/layout.css" %}" />
 
-	<link rel="shortcut icon" href="{% static "annotations/images/favicon.ico" %}">
-	<link rel="apple-touch-icon" href="{% static "annotations/images/apple-touch-icon.png" %}">
-	<link rel="apple-touch-icon" sizes="72x72" href="{% static "annotations/images/apple-touch-icon-72x72.png" %}">
-	<link rel="apple-touch-icon" sizes="114x114" href="{% static "annotations/images/apple-touch-icon-114x114.png" %}">
+	<link rel="shortcut icon" href="{% static "images/favicon.ico" %}">
+	<link rel="apple-touch-icon" href="{% static "images/apple-touch-icon.png" %}">
+	<link rel="apple-touch-icon" sizes="72x72" href="{% static "images/apple-touch-icon-72x72.png" %}">
+	<link rel="apple-touch-icon" sizes="114x114" href="{% static "images/apple-touch-icon-114x114.png" %}">
 
 	<style>
         {% block pagestyling %}{% endblock %}
