--- a/djdan/site-templates/annotations/base.html
+++ b/djdan/site-templates/annotations/base.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>{% block title %}DJ annotator{% endblock %}</title>
+
+	<script src="{% static "js/jquery.min.js" %}"></script>
+
 	<link rel="stylesheet" href="{% static "css/base.css" %}" />
 	<link rel="stylesheet" href="{% static "css/skeleton.css" %}" />
 	<link rel="stylesheet" href="{% static "css/layout.css" %}" />
