Changed the collection mechanism. This has broken the JS UI

--- a/djdan/site-templates/annotations/base.html
+++ b/djdan/site-templates/annotations/base.html
@@ -18,11 +18,36 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="{% static "images/apple-touch-icon-114x114.png" %}">
 
 	<style>
+        #header {
+		text-align: right;
+	}
+	.smallitem {
+		float: left;
+		width: 120px;
+		height: 120px;
+	}
+        .smallimage img {
+                height: 100px;
+		width:auto;
+	}
+        .smallimage img {
+		height: auto;
+		width: 100px;
+	}
         {% block pagestyling %}{% endblock %}
 	</style>
 </head>
 
 <body>
+{% if user.is_authenticated %}
+<div id="header">
+Welcome <strong>{{ user }}</strong> - Your <a href="{% url 'collectionlist' %}">collections</a>, <a href="{% url 'sessionlist' %}">sessions</a>, and <a href="{% url 'itemlist' %}">items</a>
+</div>
+{% else %}
+<div id="header">
+<a href="{% url 'loginview' %}">Login</a>
+</div>
+{% endif %}
 	<div id="content">
 	{% block content %}{% endblock %}
 	</div>
