--- a/djdan/site-templates/annotations/sessionlist.html
+++ b/djdan/site-templates/annotations/sessionlist.html
@@ -15,6 +15,12 @@
 <h2>No sessions recorded.</h2>
 {% endif %}
 
-
-<p>TODO: Add form to create new sessions </p>
+<hr/>
+<h3>Create new session</h3>
+<form method="post" action="{% url 'sessionlist' %}">
+{% csrf_token %}
+<p><label for="title">Title: </label><input type="text" name="title" placeholder="Optional"/></p>
+<p><label for="description">Description: </label><input type="text" name="description" placeholder="Optional"/></p>
+<input type="submit" value="Begin new session"/>
+</form>
 {% endblock %}
