Fixing item view

--- a/djdan/site-templates/annotations/itemview.html
+++ b/djdan/site-templates/annotations/itemview.html
@@ -69,7 +69,7 @@ body {
 <option value="vid">YouTube</option>
 </select></p>
 <p><label for="tag">Label</label><input name="tag" value="{{ item.tag }}"/></p>
-<p><label for="src">Citation to text?</label><input name="src" value="{{ item.src }}/></p>
+<p><label for="src">Citation to text?</label><input name="src" value="{{ item.src }}"/></p>
 <p><input type="submit" value="Update Item"/></p>
 <input type="hidden" itemid="{{ item.id }}" />
 </form>
