Fixing item view

--- a/djdan/site-templates/annotations/itemview.html
+++ b/djdan/site-templates/annotations/itemview.html
@@ -71,6 +71,6 @@ body {
 <p><label for="tag">Label</label><input name="tag" value="{{ item.tag }}"/></p>
 <p><label for="src">Citation to text?</label><input name="src" value="{{ item.src }}"/></p>
 <p><input type="submit" value="Update Item"/></p>
-<input type="hidden" itemid="{{ item.id }}" />
+<input type="hidden" name="itemid" value="{{ item.id }}" />
 </form>
 {% endblock %}
