--- a/djdan/site-templates/annotations/session.html
+++ b/djdan/site-templates/annotations/session.html
@@ -18,11 +18,15 @@
 {% if session %}
 <h1><span class="session_title">{% if session.title %}{{session.title}}{% else %}Untitled session #{{ session.id }}{% endif %}</span></h1>
 <h2>Session created by {{ session.creator }}</h2>
+<h4><a href="{% url "annotation" session.id %}">Continue this session</a></h4>
 <h3>Playback:</h3>
 <div id="annotations">
 {% for annotation in annotations %}
 	<div class="annotation container">
-		<div class="five columns alpha">{{ annotation.leftitem }}</div>
+		<div class="five columns alpha">{% include "annotations/leftitem.html" %}
+
+
+</div>
 		<div class="six columns">{% if annotation.annotation %}
 			<div class="annotation_text">{{ annotation.annotation }}</div>
 {% else %}
@@ -30,7 +34,7 @@
 {% endif %}
 			<div class="annotation_author">By {{annotation.creator}} on {{annotation.datestamp}}</div>
 		</div>
-		<div class="five columns omega">{{ annotation.leftitem }}</div>
+		<div class="five columns omega">{% include "annotations/rightitem.html" %}</div>
 	</div>
 {% endfor %}
 </div>
@@ -38,6 +42,4 @@
 <h2>No sessions recorded.</h2>
 {% endif %}
 
-
-<p>TODO: Add form to create new sessions </p>
 {% endblock %}
