Audio selection wasn't set to 'aud'

--- a/djdan/site-templates/annotations/add_item_form.html
+++ b/djdan/site-templates/annotations/add_item_form.html
@@ -13,7 +13,7 @@
 <p><label for="itemtype">Type of resource</label><select id="itemtype" name="itemtype">
 <option value="img">Image</option>
 <option value="txt">Text Snippet</option>
-<option value="img">Audio</option>
+<option value="aud">Audio</option>
 <option value="vid">YouTube</option>
 </select></p>
 <p><label for="tag">Label</label><input name="tag" placeholder="Optional"/></p>
