--- a/djdan/site-templates/annotations/itemview.html
+++ b/djdan/site-templates/annotations/itemview.html
@@ -65,7 +65,7 @@ body {
 <p><label for="itemtype">Type of resource</label><select id="itemtype" name="itemtype" selected="{{ item.itemtype }}">
 <option value="img">Image</option>
 <option value="txt">Text Snippet</option>
-<option value="img">Audio</option>
+<option value="aud">Audio</option>
 <option value="vid">YouTube</option>
 </select></p>
 <p><label for="tag">Label</label><input name="tag" value="{{ item.tag }}"/></p>
