Altering collection layout view

--- a/djdan/site-templates/annotations/annotate.html
+++ b/djdan/site-templates/annotations/annotate.html
@@ -30,11 +30,11 @@ body {
 	clear: both;
 }
 #collections {
-	
+	overflow: auto;
+	height: 20em;
 }
 .collection {
 	width: 20em;
-	float: left;
 }
 {% endblock %}
 
