Altering collection layout view

--- a/djdan/site-templates/annotations/item.html
+++ b/djdan/site-templates/annotations/item.html
@@ -9,3 +9,4 @@
 <iframe width="400" height="220" src="//www.youtube.com/embed/{{ item.payload | youtube_helper }}" frameborder="0" allowfullscreen></iframe>
 </div>
 {% endif %}
+<p><small> - "{{ item.tag }}"</small></p>
