Altering collection layout view

--- a/djdan/site-templates/annotations/annotate.html
+++ b/djdan/site-templates/annotations/annotate.html
@@ -84,7 +84,8 @@ function create_annotation() {
 {% endblock %}
 
 {% block content %}
-<h2>{% if annotationsession.title %}{{ annotationsession.title }}{% else %}Session ID: {{ annotationsession.id }}{% endif %}</h2>
+<h3>{% if annotationsession.title %}{{ annotationsession.title }}{% else %}Session ID: {{ annotationsession.id }}{% endif %}</h3>
+<small><a href="{% url 'session' annotationsession.id %}">Playback history</a></small>
 <div id="container">
   <div id="leftpane">&nbsp;</div>
   <div id="annotation_pane">
