--- a/djdan/site-templates/annotations/index.html
+++ b/djdan/site-templates/annotations/index.html
@@ -15,6 +15,8 @@
 {% endblock %}
 
 {% block content %}
-<h1>"Mixing the Library": The Disc Jockey and the Digital Collection</h1>
+<h1>"Mixing the Library"</h1>
+
+
 
 {% endblock %}
