--- a/djdan/site-templates/annotations/index.html
+++ b/djdan/site-templates/annotations/index.html
@@ -1,6 +1,6 @@
 {% extends "annotations/base.html" %}
 
-{% block title %}"Mixing the Library": The Disc Jockey and the Digital Collection{% endblock %}
+{% block title %}DOJAM v.1 - mixing the library{% endblock %}
 
 {% block pagestyling %}
 #annotations {
@@ -15,9 +15,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>  DOJAM 
-
-- v.1</h1>
+<h1>  DOJAM - v.1\nbasic industrial raw </h1>
 
 
 
